Renamed the .env variable HOSTNAME to SERVER_HOSTNAME to avoid conflicts in Linux.
Signed-off-by: Exadra37 <exadra37@gmail.com>

--- a/src/approov-protected-server/token-binding-check/.env.example
+++ b/src/approov-protected-server/token-binding-check/.env.example
@@ -2,7 +2,7 @@
 HTTP_PORT=8002
 
 # Setting to 0.0.0.0 is only necessary to run from inside a docker container
-HOSTNAME=0.0.0.0
+SERVER_HOSTNAME=0.0.0.0
 
 # For production usage the secret is always retrieved with the Approov CLI tool, that can be also used to generate valid
 #  tokens for testing purposes. Check docs at https://approov.io/docs/v2.1/approov-cli-tool-reference/#token-commands.
