--- a/src/unprotected-server/.env.example
+++ b/src/unprotected-server/.env.example
@@ -2,4 +2,4 @@
 HTTP_PORT=8002
 
 # Setting to 0.0.0.0 is only necessary to run from inside a docker container
-HOSTNAME=0.0.0.0
+SERVER_HOSTNAME=0.0.0.0
